--- a/elections_france_maps.Rmd
+++ b/elections_france_maps.Rmd
@@ -30,45 +30,47 @@ ogrInfo(dsn = pathToShp,layer="COMMUNE")
 # Pour info, d'autres outils existent (ex : fonction readShapeSpatial() du package maptools)
 comm <- readOGR(dsn = pathToShp, layer="COMMUNE", stringsAsFactors=FALSE)
 df.elections_2017<-read.csv('data/DOI/elections_2017_First_round.csv',colClasses=c(CODGEO='character'))
-df.elections_2017 %>% filter(grepl('03310',CODGEO))
+df.elections_2017 %>% filter(grepl('03310',INSEE_COM))
 #df.elections_2017$CODGEO<-as.character(df.elections_2017$CODGEO)
 ```
 
 
 ```{r}
 dim(comm@data)
-comm@data <- left_join(comm@data, df.elections_2017, by=c("INSEE_COM"="CODGEO"))
-dim(comm)
+comm2<-comm
+comm2@data <- left_join(comm2@data, df.elections_2017, by="INSEE_COM")
+str(comm2@data)
 ```
 
 ```{r}
 # Filtrage des données pour ne garder que la région Bretagne
-comm <- comm[comm@data$CODE_REG=="53",]
-dim(comm)
-summarise_each(comm@data, funs(sum(is.na(.)/n()))) %>% gather() %>% arrange(desc(value))
+
+comm2 <- comm2[comm2@data$CODE_REG.x=="53",]
+dim(comm2)
+summarise_each(comm2@data, funs(sum(is.na(.)/n()))) %>% gather() %>% arrange(desc(value))
 ```
 
 
 ```{r}
 # Découpage du taux de vote   en 5 classes via la méthodes des quantiles : idenfication des bornes (breaks, ou brks)
-classSuffrages <- classIntervals(comm@data$LE.PEN, 5, style = "quantile")
+classSuffrages <- classIntervals(comm2@data$LE.PEN, 5, style = "quantile")
 # Choix d'une palette de couleur pour les 5 catégories
 palette <- brewer.pal(n = 5, name = "YlOrRd")
 
 
 # Application de ce découpage à la variable suffrages, sauvegarde dans suffrage_cat
 # On stocke, pour chaque observation, la valeur de la couleur correspondante
-comm@data$suffrage_cat <- as.character(cut(comm@data$LE.PEN, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
+comm2@data$suffrage_cat <- as.character(cut(comm2@data$LE.PEN, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
 
 # On stocke l'information des classes pour créer une légende 
-legende_LePen <- as.character(levels(cut(comm@data$LE.PEN, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
+legende_LePen <- as.character(levels(cut(comm2@data$LE.PEN, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
 
 ```
 
 
 
 ```{r}
-plot(comm, col = comm@data$suffrage_cat, border='black',lwd=0.001)
+plot(comm2, col = comm2@data$suffrage_cat, border='black',lwd=0.001)
 
 legend("bottomleft", legend = legende_LePen, fill = palette, cex=0.6, title = "Vote Le Pen 2017")
 
@@ -80,16 +82,16 @@ legend("bottomleft", legend = legende_LePen, fill = palette, cex=0.6, title = "V
 ```{r}
 
 col <- findColours(classIntervals(
-            comm$Q213, 4, style="quantile"),
+            comm2$Q213, 4, style="quantile"),
             smoothColors("blue",98,"red"))
 
 leg <- findColours(classIntervals(
-            round(comm$Q213,0), 4, style="quantile"),
+            round(comm2$Q213,0), 4, style="quantile"),
             smoothColors("blue",2,"red"),
             under="moins de", over="plus de", between="–",
             cutlabels=FALSE)
 
-plot(comm,   col=col, border=col, lwd=.1)
+plot(comm2,   col=col, border=col, lwd=.1)
 
 legend("bottomleft",fill=attr(leg, "palette"),
     legend=gsub("\\.", ",", names(attr(leg,"table"))),
