--- a/elections_france_model_selection.Rmd
+++ b/elections_france_model_selection.Rmd
@@ -17,7 +17,7 @@ df<- read.csv('data/DOI/elections_2017_First_round.csv')
 ```{r}
 candidats<-c("ARTHAUD","ASSELINEAU","CHEMINADE","DUPONT.AIGNAN","FILLON","HAMON","LASSALLE","LE.PEN","MACRON","MÉLENCHON","POUTOU")
 job_indicators<- grep('Job|ratio',colnames(df),value = TRUE)
-fiscal<-c('Etudiants','Retraites','Q213','Q3_Q1','Population')
+fiscal<-c('Q213','Q3_Q1','Population')
 
 all_features<-c(candidats,job_indicators,fiscal)
 df %>% filter(is.na(LE.PEN))
@@ -35,7 +35,10 @@ df_numeric %>% summarise_each(funs(sum(is.na(.)))) %>% gather() %>% arrange(desc
 ```
 
 ```{r}
-cor.matrix<-cor(df_numeric %>% filter(!is.na(LE.PEN)) ) 
+cor.matrix<-cor(df_numeric %>% filter(!is.na(LE.PEN))%>% filter(Population<100) ) 
 View(as.data.frame(cor.matrix) %>% select(LE.PEN))
+```
+```{r}
+ggplot(df_numeric%>% filter(!is.na(LE.PEN)) %>% filter(ratio_immigrants>0)   ,aes(ratio_immigrants,LE.PEN))+ geom_point()
 ```
 
